--- a/src/styles/Sign_up_styles.module.css
+++ b/src/styles/Sign_up_styles.module.css
@@ -14,15 +14,19 @@
   justify-content: space-between;
   align-items: center;
 }
+.displayPicture_wrapper {
+  height: 100vh;
+  width: 70%;
+}
 .displayPicture {
-  margin-top: 13.3%;
-  width: 40%;
+  width: inherit;
   background: linear-gradient(rgb(34, 196, 243), rgb(49, 58, 95));
-  height: 70vh;
+  height: inherit;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  opacity: 0.5;
 }
 .displayPicture h2,
 p {
@@ -33,12 +37,12 @@ p {
   justify-content: center;
   align-items: center;
   background-color: "red";
-  width: 50%;
+  width: 40%;
 }
 .form {
   display: grid;
   grid-gap: 40%;
-  margin-right: 25%;
+  margin-right: 50%;
 }
 .form input[type="text"],
 .form input[type="email"],
@@ -52,7 +56,7 @@ p {
   background-color: transparent;
   border-bottom-left-radius: 20px;
   padding: 5px 10px;
-  position: relative;
+  color: #fff;
 }
 .form button {
   height: 7vh;
